--- a/index.html
+++ b/index.html
@@ -9,17 +9,187 @@
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'
         integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD' crossorigin='anonymous'>
 
+    <!-- NOTE Material Design Icons CSS Stylesheet-->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+
     <!-- NOTE CSS Stylesheet-->
     <link rel="stylesheet" href="style.css">
     <title>Freelancer</title>
 </head>
 
 <body>
-    <header></header>
+    <header class="sticky-top">
+        <div class="container-fluid">
+            <!-- SECTION Navigation / Header-->
+            <!-- NOTE row's are display: flex by default, no need for d-flex class-->
+            <section class="row justify-content-around bg-primary align-items-center">
+                <div class="col-12 col-md-6">
+                    <p class="fs-1 fw-bold text-white my-3">START BOOTSTRAP</p>
+                </div>
+                <div class="col-3 d-none d-md-block">
+                    <!-- NOTE d-flex applies display: flex -->
+                    <div class="d-flex justify-content-between text-white">
+                        <p class="mb-0">Portfolio</p>
+                        <p class="mb-0">About</p>
+                        <p class="mb-0">Contact</p>
+                    </div>
+                </div>
+            </section>
+            <!-- !SECTION -->
+        </div>
+    </header>
 
-    <main></main>
+    <!-- NOTE MAIN SECTION -->
+    <main>
+        <div class="container-fluid">
+            <!-- SECTION Main Section of the Web Page-->
+            <section class="row bg-success">
+                <!-- NOTE m- represents margin, accepts numbers 1-5, accepts directions ie mt mb ms me mx my -->
+                <div class="col-12 my-4 text-light text-center">
 
-    <footer></footer>
+                    <!-- NOTE dude is not a bootstrap class. -->
+                    <img class="dude"
+                        src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg"
+                        alt="Smiling dude">
+                    <h1>START BOOTSTRAP</h1>
+                    <i class="mdi mdi-star fs-1"></i>
+                    <h2>Graphic Artist - Web Designer - Illustrator</h2>
+                </div>
+            </section>
+            <!-- !SECTION -->
+
+            <!-- SECTION PORTFOLIO-->
+
+            <section class="row">
+                <div class="col-12 text-center my-1 my-5">
+                    <h2>PORTFOLIO</h2>
+                    <i class="mdi mdi-star fs-1"></i>
+                </div>
+
+                <!-- NOTE COL12 for Mobile | Col-MD-4 is for Desktop -->
+                <div class="col-12 col-sm-8 col-md-4 mb-3 p-5">
+                    <!-- NOTE img-fluid tells an img to not spill outside of its allowed col-width -->
+                    <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png"
+                        alt="Cabin" class="img-fluid photo">
+                </div>
+                <div class="col-12 col-md-4 mb-3 p-5">
+                    <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png"
+                        alt="Cabin" class="img-fluid photo">
+                </div>
+                <div class="col-12 col-md-4 mb-3 p-5">
+                    <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png"
+                        alt="Cabin" class="img-fluid photo">
+                </div>
+                <div class="col-12 col-md-4 mb-3 p-5">
+                    <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png"
+                        alt="Cabin" class="img-fluid photo">
+                </div>
+                <div class="col-12 col-md-4 mb-3 p-5">
+                    <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png"
+                        alt="Cabin" class="img-fluid photo">
+                </div>
+                <div class="col-12 col-md-4 mb-3 p-5">
+                    <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png"
+                        alt="Cabin" class="img-fluid photo">
+                </div>
+            </section>
+            <!-- !SECTION -->
+
+
+
+            <!-- SECTION ABOUT -->
+            <section class="row bg-success text-light justify-content-center">
+                <div class="col-12 my-5 text-center">
+                    <h2>About</h2>
+                    <i class=" fs-1 mdi mdi-star"></i>
+                </div>
+                <div class="col-12 col-md-4 p-4">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur error soluta doloremque
+                        cumque vel aut modi quod officia dolores alias voluptate sit, ea, rerum at aliquam incidunt quam
+                        repellendus. Rerum, libero dolorum? Accusantium quia corporis modi labore vitae. Consequatur
+                        tempora dolores, mollitia ea aut quibusdam exercitationem maxime repellat facere? Expedita.</p>
+                </div>
+                <div class="col-12 col-md-4 p-4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est earum, provident natus iure ducimus
+                        autem quo odit sit, officiis suscipit impedit nulla id tenetur assumenda, ad laboriosam fuga
+                        asperiores voluptatem et magnam animi neque. Blanditiis eius magnam libero tenetur architecto
+                        odio sit, accusamus quae pariatur, assumenda temporibus. Sit, vitae velit.</p>
+                </div>
+
+                <div class="col-12 text-center mb-5">
+                    <button class="btn btn-outline-light fs-4"><i class="mdi mdi-download-box"></i>Free
+                        Download</button>
+                </div>
+            </section>
+            <!-- !SECTION -->
+
+
+
+            <!-- SECTION CONTACT FORM PAGE -->
+            <section class="row justify-content-center py-5">
+                <div class="col-12 my-5 text-center">
+                    <h2>Contact</h2>
+                    <i class=" mdi mdi-star fs-1"></i>
+                </div>
+                <div class="col-8 mb-5">
+                    <form>
+                        <div class="mb-3 form-floating">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3 form-floating">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-floating">
+                            <label for="exampleInputPassword1" class="form-label">Phone Number/label>
+                                <input type="number" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-floating">
+                            <label for="exampleInputPassword1" class="form-label">Message</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <button type="submit" class="btn btn-success">Submit</button>
+                    </form>
+                </div>
+            </section>
+            <!-- !SECTION -->
+        </div>
+    </main>
+
+    <footer>
+        <div class="container-fluid">
+            <section class="row bg-dark text-light py-5">
+                <div class="col-12 col-md-4 p-4 text-center order-3 order-md-1">
+                    <h3>LOCATION</h3>
+                    <p>2215 John Daniel Drive
+                        Clark, MO 65243</p>
+                </div>
+                <div class="col-12 col-md-4 p-4 text-center order-1 order-md-2">
+                    <h3>AROUND THE WEB</h3>
+                    <nav class="fs-2">
+                        <i class="mdi mdi-facebook"></i>
+                        <i class="mdi mdi-twitter"></i>
+                        <i class="mdi mdi-linkedin"></i>
+                        <i class="mdi mdi-basketball"></i>
+                    </nav>
+                </div>
+                <div class="col-12 col-md-4 p-4 text-center order-2 order-md-3">
+                    <h3>About Freelancer</h3>
+                    <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap .</p>
+                </div>
+
+            </section>
+
+            <section class="row">
+                <div class="col-12 text-center bg-secondary text-light py-3">
+                    <small>Copyright <i class="mdi mdi-copyright">Joaquin Chavez</i></small>
+                </div>
+            </section>
+        </div>
+    </footer>
 </body>
 
 </html>
